--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.6",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
