--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,14 +14,16 @@
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
     "axios": "^0.19.2",
-    "expo": "~37.0.3",
+    "expo": "~40.0.0",
+    "expo-app-loading": "^1.2.1",
     "expo-constants": "~9.0.0",
-    "expo-font": "~8.1.0",
+    "expo-font": "~8.4.0",
     "expo-location": "~8.1.0",
     "expo-mail-composer": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.7.0",
@@ -34,6 +36,7 @@
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
+    "@types/react-native-dotenv": "^0.2.0",
     "babel-preset-expo": "~8.1.0",
     "typescript": "~3.8.3"
   },
