--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,35 +11,36 @@
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/ubuntu": "^0.1.0",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-native-picker/picker": "1.9.2",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
     "axios": "^0.19.2",
-    "expo": "~40.0.0",
-    "expo-app-loading": "^1.2.1",
-    "expo-constants": "~9.0.0",
-    "expo-font": "~8.4.0",
-    "expo-location": "~8.1.0",
-    "expo-mail-composer": "~8.1.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-constants": "~12.1.3",
+    "expo-font": "~10.0.3",
+    "expo-location": "~13.0.4",
+    "expo-mail-composer": "~11.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "0.26.1",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-svg": "^11.0.1",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.28.1",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
+    "unimodules-permissions-interface": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-dotenv": "^0.2.0",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "babel-preset-expo": "8.5.1",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
